# rebounds

./: CHANGELOG.md  README.md  hw-hmatrix-playground.cabal  rebounds.cabal
.circleci/: config.yml
app/App/: Commands.hs
app/App/Commands/: Bounds.hs  Types.hs
src/HaskellWorks/: Rebounds.hs
src/HaskellWorks/Playground/: Linear.hs
test/HaskellWorks/: ReboundsSpec.hs
test/HaskellWorks/Playground/: LinearSpec.hs
