cabal-version: 2.4

name:                   hw-playground-hmatrix
version:                0.1.0.0
synopsis:               Primitive functions and data types
description:            Primitive functions and data types.
category:               Data
stability:              Experimental
homepage:               http://github.com/haskell-works/hw-playground-hmatrix#readme
bug-reports:            https://github.com/haskell-works/hw-playground-hmatrix/issues
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2016-2019 John Ky
license:                BSD-3-Clause
license-file:           LICENSE
tested-with:            GHC == 8.8.1, GHC == 8.6.5, GHC == 8.4.4
build-type:             Simple
extra-source-files:     README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/hw-playground-hmatrix

common base                     { build-depends: base                     >= 4          && < 5      }

common generic-lens             { build-depends: generic-lens             >= 1.2.0.1    && < 1.3    }
common hedgehog                 { build-depends: hedgehog                 >= 0.5        && < 1.1    }
common hmatrix                  { build-depends: hmatrix                  >= 0.20.0.0   && < 0.21   }
common hmatrix-csv              { build-depends: hmatrix-csv              >= 0.1.0.2    && < 0.2    }
common hspec                    { build-depends: hspec                    >= 2.4        && < 2.8    }
common hw-hspec-hedgehog        { build-depends: hw-hspec-hedgehog        >= 0.1        && < 0.2    }
common lens                     { build-depends: lens                     >= 4          && < 5      }
common megaparsec               { build-depends: megaparsec               >= 8          && < 9      }
common optparse-applicative     { build-depends: optparse-applicative     >= 0.14       && < 0.16   }
common text                     { build-depends: text                     >= 1.2        && < 1.3    }

common config
  default-language:     Haskell2010

common hw-playground-hmatrix
  build-depends:        hw-playground-hmatrix

library
  import:               base
                      , config
                      , hmatrix
                      , hmatrix-csv
                      , megaparsec
                      , text
  exposed-modules:      HaskellWorks.Playground.Linear
  other-modules:        Paths_hw_hmatrix_playground
  autogen-modules:      Paths_hw_hmatrix_playground
  hs-source-dirs:       src

test-suite hw-playground-hmatrix-test
  import:               base
                      , config
                      , hedgehog
                      , hspec
                      , hw-hspec-hedgehog
                      , hw-playground-hmatrix
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:        HaskellWorks.Playground.LinearSpec
                        Paths_hw_hmatrix_playground
  autogen-modules:      Paths_hw_hmatrix_playground
  build-depends:        hw-playground-hmatrix
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:   hspec-discover:hspec-discover
