cabal-version: 2.4

name:                   rebounds
version:                0.1.0.0
synopsis:               Primitive functions and data types
description:            Primitive functions and data types.
category:               Data
stability:              Experimental
homepage:               http://github.com/haskell-works/rebounds#readme
bug-reports:            https://github.com/haskell-works/rebounds/issues
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2016-2020 John Ky
license:                BSD-3-Clause
license-file:           LICENSE
tested-with:            GHC == 8.10.2, GHC == 8.8.3, GHC == 8.6.5, GHC == 8.4.4
build-type:             Simple
extra-source-files:     README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/rebounds

common base                     { build-depends: base                     >= 4.11       && < 5      }

common generic-lens             { build-depends: generic-lens             >= 1.2.0.1    && < 2.1    }
common hedgehog                 { build-depends: hedgehog                 >= 0.5        && < 1.1    }
common hspec                    { build-depends: hspec                    >= 2.4        && < 2.8    }
common hw-hspec-hedgehog        { build-depends: hw-hspec-hedgehog        >= 0.1        && < 0.2    }
common lens                     { build-depends: lens                     >= 4          && < 5      }
common optparse-applicative     { build-depends: optparse-applicative     >= 0.14       && < 0.17   }
common text                     { build-depends: text                     >= 1.2        && < 1.3    }

common config
  default-language:     Haskell2010

common rebounds
  build-depends:        rebounds

library
  import:               base
                      , config
  exposed-modules:      HaskellWorks.Rebounds
  other-modules:        Paths_rebounds
  autogen-modules:      Paths_rebounds
  hs-source-dirs:       src

executable rebounds
  import:               base, config
                      , generic-lens
                      , lens
                      , text
                      , optparse-applicative
                      , rebounds
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  other-modules:        App.Commands
                        App.Commands.Bounds
                        App.Commands.Types

test-suite rebounds-test
  import:               base
                      , config
                      , hedgehog
                      , hspec
                      , hw-hspec-hedgehog
                      , rebounds
  type:                 exitcode-stdio-1.0
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  main-is:              Spec.hs
  build-depends:        rebounds
  hs-source-dirs:       test
  build-tool-depends:   hspec-discover:hspec-discover
